Fix title padding on small screens

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -4,7 +4,6 @@
 }
 
 .home-main-title {
-    width: 100%;
     height: 100%;
 }
 
